v1.2.0 (2017.07.xx)
  - Update libhdhomerun library to version 2017.06.12
  - Fix issue with Live TV stream that could occur if internal buffer ever became completely filled
  - Allow Live TV seek to operate within the internal buffer when possible rather than restarting stream

v1.1.1 (2017.07.07)
  - Allow for 30-second and 1-minute local network discovery intervals (devices, lineups, recordings)
  - Adapt to backend recording attribute change; use DisplayGroupTitle instead of Title for recording folder names
  - Detect special recording DisplayGroupTitle attributes 'movie' and 'sport' and convert to 'Movies'/'Sports' folders

v1.1.0 (2017.07.01)
  - Update SQLite database engine to version 3.19.3
  - Update cURL library to version 7.54.1
  - New Electronic Program Guide (EPG) implementation
  - Fix demuxer format hint for Live TV streams
  - Use GUI dialog boxes to indicate errors that occur when adding timers rather than throwing an exception
  - Add a selection dialog box when adding Record Series Rule timers to allow user to choose from matching titles
  - Apply the "Startup discovery task delay" to the discovery executed on wake from sleep
  - (Linux/Android) Prevent cURL from raising signals on name resolution failures or data transfer time-outs
  
v1.0.10 (2017.06.07)
  - Reduce number of Kodi callbacks generated during initial discovery tasks
  - Delay initial discovery tasks a configurable number of seconds to work around Kodi deadlock condition
  - Add "Startup discovery task delay (seconds)" advanced option
  - Remove unnecessary 1 second delays when manually triggering discoveries via PVR Client Specific settings
  - Remove unnecessary electronic program guide update when channel lineup changes are detected

v1.0.9 (2017.06.02)
  - Update SQLite database engine to version 3.19.2
  - Update cURL library to version 7.54.0
  - Perform immediate discovery of all local network resources (devices, lineups, recordings) during addon startup